corrects flexbox spacing

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -18,7 +18,7 @@ header {
 #thumbnail-grid {
 	margin: 0 10% 10px;
 	display: flex;
-	justify-content: space-between right;
+	justify-content: space-between;
 	flex-wrap: wrap;
 
 	.thumbnail {
